--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -39,6 +39,7 @@
     --color-violetHeavyDark: #1e1b23;
     --color-violetBtnBorderDark: #625b6e;
     --color-violetBright: #835ace;
+    --color-violetBrighter: #7353a7;
     --color-darbVioletBtnOutline: #816ba6;
     --color-mediumDarkBlue: #424b77;
     --color-first: #2c3e50;
