Add new text color variable and update button styles in SearchCurrentViewButton

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -41,6 +41,7 @@
     --color-violetBright: #835ace;
     --color-violetBrighter: #7353a7;
     --color-darbVioletBtnOutline: #816ba6;
+    --color-violetBrightText: #9a6ded;
     --color-mediumDarkBlue: #424b77;
     --color-first: #2c3e50;
     --color-second: #34495e;
