--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -41,7 +41,7 @@
     --color-violetBtnBorderDark: #625b6e;
     --color-violetBright: #835ace;
     --color-violetBrighter: #7353a7;
-    --color-darbVioletBtnOutline: #816ba6;
+    --color-darkVioletBtnOutline: #816ba6;
     --color-violetBrightText: #9a6ded;
     --color-mediumDarkBlue: #424b77;
     --color-violetDarkText: #4c3d58;
@@ -106,33 +106,33 @@ body {
 }
 
 html.dark
-    .custom-rate
-    .ant-rate-star:not(.ant-rate-star-full)
-    .ant-rate-star-second,
+.custom-rate
+.ant-rate-star:not(.ant-rate-star-full)
+.ant-rate-star-second,
 html.dark
-    .custom-rate-spot-comment
-    .ant-rate-star:not(.ant-rate-star-full)
-    .ant-rate-star-second,
+.custom-rate-spot-comment
+.ant-rate-star:not(.ant-rate-star-full)
+.ant-rate-star-second,
 html.dark
-    .custom-rate-searched-spot
-    .ant-rate-star:not(.ant-rate-star-full)
-    .ant-rate-star-second {
+.custom-rate-searched-spot
+.ant-rate-star:not(.ant-rate-star-full)
+.ant-rate-star-second {
     color: #ffffff;
     text-shadow: none;
 }
 
 html:not(.dark)
-    .custom-rate
-    .ant-rate-star:not(.ant-rate-star-full)
-    .ant-rate-star-second,
+.custom-rate
+.ant-rate-star:not(.ant-rate-star-full)
+.ant-rate-star-second,
 html:not(.dark)
-    .custom-rate-spot-comment
-    .ant-rate-star:not(.ant-rate-star-full)
-    .ant-rate-star-second,
+.custom-rate-spot-comment
+.ant-rate-star:not(.ant-rate-star-full)
+.ant-rate-star-second,
 html:not(.dark)
-    .custom-rate-searched-spot
-    .ant-rate-star:not(.ant-rate-star-full)
-    .ant-rate-star-second {
+.custom-rate-searched-spot
+.ant-rate-star:not(.ant-rate-star-full)
+.ant-rate-star-second {
     color: #cacaca;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
 }
@@ -262,7 +262,7 @@ html:not(.dark) .ant-carousel .slick-dots li.slick-active button {
 }
 
 .emoji-picker [data-emoji]:hover {
-    @apply hover:bg-darbVioletBtnOutline active:bg-violetLighter bg-violetDarker border-none hover:cursor-pointer;
+    @apply hover:bg-darkVioletBtnOutline active:bg-violetLighter bg-violetDarker border-none hover:cursor-pointer;
 }
 
 .scroll-grab::-webkit-scrollbar-thumb {
