MER-286 - code cleanup

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -163,9 +163,9 @@ body {
     white-space: pre-wrap;
 }
 
-/*.tiptap img {*/
-/*    @apply max-w-96 max-h-96 h-auto w-auto;*/
-/*}*/
+.tiptap img {
+    @apply max-h-128 h-auto w-auto;
+}
 
 .tiptap a {
     @apply cursor-pointer text-blue-500 underline;
@@ -211,11 +211,6 @@ body {
     display: inline;
     margin: 0;
 }
-
-/*.tiptap p:empty::before {*/
-/*    content: "";*/
-/*    display: inline-block;*/
-/*}*/
 
 .tiptap li {
     display: flex;
