--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -174,7 +174,7 @@ html:not(.dark) .ant-carousel .slick-dots li.slick-active button {
 }
 
 .tiptap img {
-    @apply max-h-128 h-auto w-auto;
+    @apply max-h-128 max-w-full h-auto w-auto;
 }
 
 .tiptap a {
