--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -271,3 +271,9 @@ html:not(.dark) .ant-carousel .slick-dots li.slick-active button {
 .scroll-grab::-webkit-scrollbar-thumb:active {
     cursor: grabbing;
 }
+
+.ant-picker .ant-picker-suffix,
+.ant-picker .ant-picker-clear {
+    color: #fff;
+}
+
